k8s/domains/documents/infra/api/overlays/live/documents-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: documents-api-depl
spec:
  template:
    spec:
      containers:
        - name: documents-api
