k8s/domains/documents/infra/api/overlays/live/documents-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: documents-api-public
spec:
  tls:
    certResolver: le
    domains:
      - main: api.tma.com
